hotfix: second attempt to fix the bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ body {
 	line-height: 1.875rem;
 	background-color: #fafafa;
 	position: relative;
-	overflow: auto;
 }
 
 div[data-id="3"] {
@@ -130,7 +129,6 @@ div[data-id="3"] {
 	left: 20%;
 	cursor: pointer;
 	filter: contrast(0.5);
-	z-index: 1;
 }
 
 /* Active states of bookmark-btn & bookmark-icon */
@@ -291,7 +289,7 @@ div[data-id="3"] {
 	/* Mobile Menu */
 	.header__nav--mobile {
 		position: fixed;
-		z-index: 1;
+		z-index: 10;
 		left: 0;
 		top: 0;
 		width: 100%;
